[gd_scene load_steps=7 format=2]

[ext_resource path="res://level/Objetos/Luz.material" type="Material" id=1]
[ext_resource path="res://level/Objetos/Luz.gd" type="Script" id=2]
[ext_resource path="res://level/Objetos/Luz_off.material" type="Material" id=3]

[sub_resource type="ArrayMesh" id=1]
resource_name = "LuzTecho"
surfaces/0 = {
"aabb": AABB( -1, -0.0999999, -1, 2, 0.20001, 2 ),
"array_data": PoolByteArray( 0, 0, 128, 191, 192, 204, 204, 61, 0, 0, 128, 191, 129, 0, 0, 0, 0, 127, 0, 127, 0, 60, 0, 0, 0, 0, 128, 191, 192, 204, 204, 189, 0, 0, 128, 63, 129, 0, 0, 0, 0, 127, 0, 127, 0, 0, 187, 38, 0, 0, 128, 191, 192, 204, 204, 189, 0, 0, 128, 191, 129, 0, 0, 0, 0, 127, 0, 127, 0, 0, 0, 0, 0, 0, 128, 191, 192, 204, 204, 61, 0, 0, 128, 191, 129, 0, 0, 0, 0, 127, 0, 127, 0, 60, 0, 0, 0, 0, 128, 191, 192, 204, 204, 61, 0, 0, 128, 63, 129, 0, 0, 0, 0, 127, 0, 127, 0, 60, 187, 38, 0, 0, 128, 191, 192, 204, 204, 189, 0, 0, 128, 63, 129, 0, 0, 0, 0, 127, 0, 127, 0, 0, 187, 38, 0, 0, 128, 63, 192, 204, 204, 61, 0, 0, 128, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 60, 0, 0, 0, 0, 128, 191, 192, 204, 204, 189, 0, 0, 128, 191, 0, 0, 129, 0, 0, 127, 0, 127, 183, 59, 0, 60, 0, 0, 128, 63, 192, 204, 204, 189, 0, 0, 128, 191, 0, 0, 129, 0, 0, 127, 0, 127, 183, 59, 0, 0, 0, 0, 128, 63, 192, 204, 204, 61, 0, 0, 128, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 60, 0, 0, 0, 0, 128, 191, 192, 204, 204, 61, 0, 0, 128, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 60, 0, 60, 0, 0, 128, 191, 192, 204, 204, 189, 0, 0, 128, 191, 0, 0, 129, 0, 0, 127, 0, 127, 183, 59, 0, 60, 0, 0, 128, 63, 192, 204, 204, 61, 0, 0, 128, 63, 127, 0, 0, 0, 0, 127, 0, 127, 0, 60, 169, 59, 0, 0, 128, 63, 192, 204, 204, 189, 0, 0, 128, 191, 127, 0, 0, 0, 0, 127, 0, 127, 0, 0, 0, 60, 0, 0, 128, 63, 192, 204, 204, 189, 0, 0, 128, 63, 127, 0, 0, 0, 0, 127, 0, 127, 0, 0, 169, 59, 0, 0, 128, 63, 192, 204, 204, 61, 0, 0, 128, 63, 127, 0, 0, 0, 0, 127, 0, 127, 0, 60, 169, 59, 0, 0, 128, 63, 192, 204, 204, 61, 0, 0, 128, 191, 127, 0, 0, 0, 0, 127, 0, 127, 0, 60, 0, 60, 0, 0, 128, 63, 192, 204, 204, 189, 0, 0, 128, 191, 127, 0, 0, 0, 0, 127, 0, 127, 0, 0, 0, 60, 0, 0, 128, 191, 192, 204, 204, 61, 0, 0, 128, 63, 0, 0, 127, 0, 127, 0, 0, 127, 0, 0, 0, 0, 0, 0, 128, 63, 192, 204, 204, 189, 0, 0, 128, 63, 0, 0, 127, 0, 127, 0, 0, 127, 72, 39, 0, 60, 0, 0, 128, 191, 192, 204, 204, 189, 0, 0, 128, 63, 0, 0, 127, 0, 127, 0, 0, 127, 0, 0, 0, 60, 0, 0, 128, 191, 192, 204, 204, 61, 0, 0, 128, 63, 0, 0, 127, 0, 127, 0, 0, 127, 0, 0, 0, 0, 0, 0, 128, 63, 192, 204, 204, 61, 0, 0, 128, 63, 0, 0, 127, 0, 127, 0, 0, 127, 72, 39, 0, 0, 0, 0, 128, 63, 192, 204, 204, 189, 0, 0, 128, 63, 0, 0, 127, 0, 127, 0, 0, 127, 72, 39, 0, 60, 0, 0, 128, 191, 192, 204, 204, 189, 0, 0, 128, 63, 0, 129, 0, 0, 127, 0, 0, 127, 0, 0, 0, 0, 0, 0, 128, 63, 192, 204, 204, 189, 0, 0, 128, 191, 0, 129, 0, 0, 127, 0, 0, 127, 0, 60, 255, 59, 0, 0, 128, 191, 192, 204, 204, 189, 0, 0, 128, 191, 0, 129, 0, 0, 127, 0, 0, 127, 0, 0, 255, 59, 0, 0, 128, 191, 192, 204, 204, 189, 0, 0, 128, 63, 0, 129, 0, 0, 127, 0, 0, 127, 0, 0, 0, 0, 0, 0, 128, 63, 192, 204, 204, 189, 0, 0, 128, 63, 0, 129, 0, 0, 127, 0, 0, 127, 0, 60, 0, 0, 0, 0, 128, 63, 192, 204, 204, 189, 0, 0, 128, 191, 0, 129, 0, 0, 127, 0, 0, 127, 0, 60, 255, 59, 0, 0, 128, 63, 192, 204, 204, 61, 0, 0, 128, 63, 0, 127, 0, 0, 129, 0, 0, 127, 0, 0, 0, 0, 0, 0, 128, 191, 192, 204, 204, 61, 0, 0, 128, 191, 0, 127, 0, 0, 129, 0, 0, 127, 0, 60, 255, 59, 0, 0, 128, 63, 192, 204, 204, 61, 0, 0, 128, 191, 0, 127, 0, 0, 129, 0, 0, 127, 0, 0, 255, 59, 0, 0, 128, 63, 192, 204, 204, 61, 0, 0, 128, 63, 0, 127, 0, 0, 129, 0, 0, 127, 0, 0, 0, 0, 0, 0, 128, 191, 192, 204, 204, 61, 0, 0, 128, 63, 0, 127, 0, 0, 129, 0, 0, 127, 0, 60, 0, 0, 0, 0, 128, 191, 192, 204, 204, 61, 0, 0, 128, 191, 0, 127, 0, 0, 129, 0, 0, 127, 0, 60, 255, 59 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 97303,
"index_count": 0,
"material": ExtResource( 1 ),
"name": "Luz",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 36
}

[sub_resource type="ArrayMesh" id=2]
resource_name = "LuzTecho"
surfaces/0 = {
"aabb": AABB( -1, -0.0999999, -1, 2, 0.20001, 2 ),
"array_data": PoolByteArray( 0, 0, 128, 191, 192, 204, 204, 61, 0, 0, 128, 191, 129, 0, 0, 0, 0, 127, 0, 127, 0, 60, 0, 0, 0, 0, 128, 191, 192, 204, 204, 189, 0, 0, 128, 63, 129, 0, 0, 0, 0, 127, 0, 127, 0, 0, 187, 38, 0, 0, 128, 191, 192, 204, 204, 189, 0, 0, 128, 191, 129, 0, 0, 0, 0, 127, 0, 127, 0, 0, 0, 0, 0, 0, 128, 191, 192, 204, 204, 61, 0, 0, 128, 191, 129, 0, 0, 0, 0, 127, 0, 127, 0, 60, 0, 0, 0, 0, 128, 191, 192, 204, 204, 61, 0, 0, 128, 63, 129, 0, 0, 0, 0, 127, 0, 127, 0, 60, 187, 38, 0, 0, 128, 191, 192, 204, 204, 189, 0, 0, 128, 63, 129, 0, 0, 0, 0, 127, 0, 127, 0, 0, 187, 38, 0, 0, 128, 63, 192, 204, 204, 61, 0, 0, 128, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 60, 0, 0, 0, 0, 128, 191, 192, 204, 204, 189, 0, 0, 128, 191, 0, 0, 129, 0, 0, 127, 0, 127, 183, 59, 0, 60, 0, 0, 128, 63, 192, 204, 204, 189, 0, 0, 128, 191, 0, 0, 129, 0, 0, 127, 0, 127, 183, 59, 0, 0, 0, 0, 128, 63, 192, 204, 204, 61, 0, 0, 128, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 60, 0, 0, 0, 0, 128, 191, 192, 204, 204, 61, 0, 0, 128, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 60, 0, 60, 0, 0, 128, 191, 192, 204, 204, 189, 0, 0, 128, 191, 0, 0, 129, 0, 0, 127, 0, 127, 183, 59, 0, 60, 0, 0, 128, 63, 192, 204, 204, 61, 0, 0, 128, 63, 127, 0, 0, 0, 0, 127, 0, 127, 0, 60, 169, 59, 0, 0, 128, 63, 192, 204, 204, 189, 0, 0, 128, 191, 127, 0, 0, 0, 0, 127, 0, 127, 0, 0, 0, 60, 0, 0, 128, 63, 192, 204, 204, 189, 0, 0, 128, 63, 127, 0, 0, 0, 0, 127, 0, 127, 0, 0, 169, 59, 0, 0, 128, 63, 192, 204, 204, 61, 0, 0, 128, 63, 127, 0, 0, 0, 0, 127, 0, 127, 0, 60, 169, 59, 0, 0, 128, 63, 192, 204, 204, 61, 0, 0, 128, 191, 127, 0, 0, 0, 0, 127, 0, 127, 0, 60, 0, 60, 0, 0, 128, 63, 192, 204, 204, 189, 0, 0, 128, 191, 127, 0, 0, 0, 0, 127, 0, 127, 0, 0, 0, 60, 0, 0, 128, 191, 192, 204, 204, 61, 0, 0, 128, 63, 0, 0, 127, 0, 127, 0, 0, 127, 0, 0, 0, 0, 0, 0, 128, 63, 192, 204, 204, 189, 0, 0, 128, 63, 0, 0, 127, 0, 127, 0, 0, 127, 72, 39, 0, 60, 0, 0, 128, 191, 192, 204, 204, 189, 0, 0, 128, 63, 0, 0, 127, 0, 127, 0, 0, 127, 0, 0, 0, 60, 0, 0, 128, 191, 192, 204, 204, 61, 0, 0, 128, 63, 0, 0, 127, 0, 127, 0, 0, 127, 0, 0, 0, 0, 0, 0, 128, 63, 192, 204, 204, 61, 0, 0, 128, 63, 0, 0, 127, 0, 127, 0, 0, 127, 72, 39, 0, 0, 0, 0, 128, 63, 192, 204, 204, 189, 0, 0, 128, 63, 0, 0, 127, 0, 127, 0, 0, 127, 72, 39, 0, 60, 0, 0, 128, 191, 192, 204, 204, 189, 0, 0, 128, 63, 0, 129, 0, 0, 127, 0, 0, 127, 0, 0, 0, 0, 0, 0, 128, 63, 192, 204, 204, 189, 0, 0, 128, 191, 0, 129, 0, 0, 127, 0, 0, 127, 0, 60, 255, 59, 0, 0, 128, 191, 192, 204, 204, 189, 0, 0, 128, 191, 0, 129, 0, 0, 127, 0, 0, 127, 0, 0, 255, 59, 0, 0, 128, 191, 192, 204, 204, 189, 0, 0, 128, 63, 0, 129, 0, 0, 127, 0, 0, 127, 0, 0, 0, 0, 0, 0, 128, 63, 192, 204, 204, 189, 0, 0, 128, 63, 0, 129, 0, 0, 127, 0, 0, 127, 0, 60, 0, 0, 0, 0, 128, 63, 192, 204, 204, 189, 0, 0, 128, 191, 0, 129, 0, 0, 127, 0, 0, 127, 0, 60, 255, 59, 0, 0, 128, 63, 192, 204, 204, 61, 0, 0, 128, 63, 0, 127, 0, 0, 129, 0, 0, 127, 0, 0, 0, 0, 0, 0, 128, 191, 192, 204, 204, 61, 0, 0, 128, 191, 0, 127, 0, 0, 129, 0, 0, 127, 0, 60, 255, 59, 0, 0, 128, 63, 192, 204, 204, 61, 0, 0, 128, 191, 0, 127, 0, 0, 129, 0, 0, 127, 0, 0, 255, 59, 0, 0, 128, 63, 192, 204, 204, 61, 0, 0, 128, 63, 0, 127, 0, 0, 129, 0, 0, 127, 0, 0, 0, 0, 0, 0, 128, 191, 192, 204, 204, 61, 0, 0, 128, 63, 0, 127, 0, 0, 129, 0, 0, 127, 0, 60, 0, 0, 0, 0, 128, 191, 192, 204, 204, 61, 0, 0, 128, 191, 0, 127, 0, 0, 129, 0, 0, 127, 0, 60, 255, 59 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 97303,
"index_count": 0,
"material": ExtResource( 3 ),
"name": "Luz",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 36
}

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 0.104003, 1 )

[node name="Luz" type="StaticBody"]
script = ExtResource( 2 )

[node name="LuzTechoOn" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.92078, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="LuzTechoOff" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.92078, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Light" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 5.73921, 0 )
light_specular = 0.3
light_bake_mode = 2
shadow_enabled = true
omni_range = 40.0
omni_attenuation = 8.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.92078, 0 )
shape = SubResource( 3 )

[node name="ChispaPoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.989, 0 )
